# first-rust-api

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
static/js/: app.js  tweet-service.js  tweet.js  utils.js
